--- a/views/course.html
+++ b/views/course.html
@@ -106,7 +106,7 @@
                                                     <div class="video-js-wrapper">
                                                         <video id="video-js" class="video-js vjs-16-9" controls
                                                             preload="auto" data-setup="{}">
-                                                            <source src="/assets\videos\video1.mp4" type="video/mp4" />
+                                                            <source src="/assets/videos/video1.mp4" type="video/mp4" />
                                                             <p class="vjs-no-js">
                                                                 To view this video please enable JavaScript, and
                                                                 consider upgrading to a
@@ -286,9 +286,9 @@
                             <div class="col-12 col-md-4">
                                 <div class="guide">
                                     <div class="thumbnail thumb-fit">
-                                        <img class="d-none d-md-block" src="/assets\img\thumbnail\teacher.png"
+                                        <img class="d-none d-md-block" src="/assets/img/thumbnail/teacher.png"
                                             alt="thumb1">
-                                        <img class="d-block d-md-none" src="/assets\img\thumbnail\logh.png"
+                                        <img class="d-block d-md-none" src="/assets/img/thumbnail/logh.png"
                                             alt="thumb1">
                                         <div class="info  bottom-center p-0">
                                             <a href="">
@@ -413,7 +413,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
