--- a/views/padcast.html
+++ b/views/padcast.html
@@ -85,7 +85,7 @@
                                             <div class="col-12">
                                                 <div class="guide">
                                                     <div class="thumbnail thumb-fit">
-                                                        <img src="/assets\img/cards/blog-banner.png" alt="thumb1">
+                                                        <img src="/assets/img/cards/blog-banner.png" alt="thumb1">
                                                         <div class="info top-right  no-gradient p-xs">
                                                             <div class="badge  with-shadow">
                                                                 <i class="icon li-voice-2"></i>
@@ -118,7 +118,7 @@
                                         <div class="teacher-statistics">
                                             <div class="info">
                                                 <div class="thumbnail no-shadow">
-                                                    <img src="/assets\img\thumbnail\sts.png" alt="">
+                                                    <img src="/assets/img/thumbnail/sts.png" alt="">
                                                 </div>
                                                 <span class="title">مهدی نژاد</span>
                                             </div>
@@ -148,7 +148,7 @@
                         <div class="col-12 col-lg-7">
                             <div class="padcast-card">
                                 <div class="cover">
-                                    <img src="/assets\img\cards\padcastimg.png" alt="thumb1">
+                                    <img src="/assets/img/cards/padcastimg.png" alt="thumb1">
                                 </div>
                                 <div class="controls d-flex  w-100">
                                     <div class="info w-100 h-100">
@@ -166,7 +166,7 @@
 
                                     </button>
                                     <audio class="audio-player">
-                                        <source src="/assets\audio\Hotel-California_0.mp3" type="audio/mpeg">
+                                        <source src="/assets/audio/Hotel-California_0.mp3" type="audio/mpeg">
                                         Your browser does not
                                         support
                                         the audio element.
@@ -268,12 +268,12 @@
                                 <div class="comments-and-answers">
                                     <div class="q-and-ans">
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -296,11 +296,11 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-2.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-2.png" alt="avatar-1">
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -319,12 +319,12 @@
                                             </div>
                                         </div>
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -347,12 +347,12 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
 
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -378,7 +378,7 @@
                                 <div class="card row-sm space not-hover gap-md br-sm">
                                     <div class="guide">
                                         <div class="thumbnail thumb-fit thumb-sm">
-                                            <img src="/assets\img\cards\author.png" alt="author">
+                                            <img src="/assets/img/cards/author.png" alt="author">
                                         </div>
                                     </div>
                                     <div class="content">
@@ -401,7 +401,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small1.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small1.png" alt="thumb1">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -414,7 +414,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -427,7 +427,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -492,7 +492,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
