--- a/views/video.html
+++ b/views/video.html
@@ -83,7 +83,7 @@
                                     <div class="video-js-wrapper">
                                         <video id="video-js" class="video-js" poster="/assets/img/video-poster.png"
                                             controls preload="auto" data-setup="{}">
-                                            <source src="/assets\videos\video12.mp4" type="video/webm" />
+                                            <source src="/assets/videos/video12.mp4" type="video/webm" />
                                             <p class="vjs-no-js">
                                                 To view this video please enable JavaScript, and consider upgrading to a
                                                 web browser that
@@ -106,7 +106,7 @@
                         <div class="teacher-statistics">
                             <div class="info">
                                 <div class="thumbnail no-shadow">
-                                    <img src="/assets\img\thumbnail\sts.png" alt="">
+                                    <img src="/assets/img/thumbnail/sts.png" alt="">
                                 </div>
                                 <span class="title">مهدی نژاد</span>
                             </div>
@@ -214,12 +214,12 @@
                                 <div class="comments-and-answers">
                                     <div class="q-and-ans">
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -243,11 +243,11 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-2.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-2.png" alt="avatar-1">
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -266,12 +266,12 @@
                                             </div>
                                         </div>
                                         <div class="comment">
-                                            <img class="avatar d-none d-sm-block" src="/assets\img\avatar\avatar-1.png"
+                                            <img class="avatar d-none d-sm-block" src="/assets/img/avatar/avatar-1.png"
                                                 alt="avatar-1">
                                             <div class="content">
                                                 <div class="header">
                                                     <img class="avatar d-block d-sm-none"
-                                                        src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                        src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                     <div class="info w-100">
                                                         <div
                                                             class="d-flex align-items-center justify-content-between w-100">
@@ -295,12 +295,12 @@
                                         <div class="answer-wrapper">
                                             <div class="comment answer">
                                                 <img class="avatar d-none d-sm-block"
-                                                    src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                    src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
 
                                                 <div class="content">
                                                     <div class="header">
                                                         <img class="avatar d-block d-sm-none"
-                                                            src="/assets\img\avatar\avatar-1.png" alt="avatar-1">
+                                                            src="/assets/img/avatar/avatar-1.png" alt="avatar-1">
                                                         <div class="info w-100">
                                                             <div
                                                                 class="d-flex align-items-center justify-content-between w-100">
@@ -330,7 +330,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small1.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small1.png" alt="thumb1">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -343,7 +343,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -356,7 +356,7 @@
                                     <a href="" class="card row-sm space-no-space not-shadow-hover">
                                         <div class="guide">
                                             <div class="thumbnail thumb-fit thumb-xs">
-                                                <img src="/assets\img\thumbnail\small2.png" alt="thumb1">
+                                                <img src="/assets/img/thumbnail/small2.png" alt="thumb1">
                                                 <div class="info"></div>
                                             </div>
                                         </div>
@@ -421,7 +421,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
