--- a/views/contactus.html
+++ b/views/contactus.html
@@ -223,7 +223,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
