--- a/views/videos.html
+++ b/views/videos.html
@@ -163,7 +163,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon li-play"></i>
@@ -199,7 +199,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon li-play"></i>
@@ -235,7 +235,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon li-play"></i>
@@ -271,7 +271,7 @@
                                             <div class="col-12 col-lg-5 align-items-center  d-flex">
                                                 <div class="guide h-100">
                                                     <div class="thumbnail h-100">
-                                                        <img src="/assets\img\thumbnail\logh.png" alt="thumb1">
+                                                        <img src="/assets/img/thumbnail/logh.png" alt="thumb1">
                                                         <div class="info top-right no-gradient">
                                                             <div class="badge sm">
                                                                 <i class="icon li-play"></i>
@@ -358,7 +358,7 @@
                                                 <button class="btn white mt-xs text-secondary"
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
