padcast-thumbnail-fix

--- a/views/padcast.html
+++ b/views/padcast.html
@@ -626,7 +626,7 @@
                     <div class="padcast-card sticky">
                         <div class="padcast-badge">
                             <div class="thumb">
-                                <img src="/assets\img\stk1.png" alt="thumb1">
+                                <img src="/assets/img/stk1.png" alt="thumb1">
                             </div>
                             <span class="padcast-title">مهدی نژاد</span>
                         </div>
@@ -650,7 +650,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn outlined close-sticky-btn"><i class="icon li-close-square"></i>بستن</button>
+        <button class="btn outlined close-sticky-btn"><i class="icon li-close-square"></i><span class="d-none d-sm-inline">بستن</span></button>
 
     </div>
 </body>
