--- a/assets/css/components/category-navbar/_xs.scss
+++ b/assets/css/components/category-navbar/_xs.scss
@@ -1,5 +1,9 @@
 .category-nav {
-
+    .categories {
+        .category{
+            font-size: 18px;
+        }
+    }
     &.statistics {
         padding-left: 16px;
         padding-right: 16px;
