--- a/assets/css/components/badge/_base.scss
+++ b/assets/css/components/badge/_base.scss
@@ -111,7 +111,7 @@
         justify-content: start;
         gap: 10px;
         padding: 18px 20px;
-        border-radius: var(--rounded-lg, 10px);
+        border-radius: var(--rounded-lg);
 
         .title {
             font-size: 20px;
