--- a/assets/css/components/card/_xs.scss
+++ b/assets/css/components/card/_xs.scss
@@ -1,5 +1,12 @@
 .card {
-
+    >.footer {
+        .title {
+            font-size: 18px;
+        }
+        .subtitle {
+            font-size: 14px;
+        }
+    }
 
     &.card-row {
         .row {
