--- a/assets/css/partials/_reboot.scss
+++ b/assets/css/partials/_reboot.scss
@@ -14,16 +14,17 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  z-index: -1;
   background-image: url('/assets/img/body-bg.png'),url('/assets/img/footer-bg.png');
   background-repeat: no-repeat,no-repeat;
   background-position:
   top left,
   bottom right;
-  // background-size: 497px 953px,743px 1082px;
-  overflow-x: hidden;
+
 }
 
 * {
