--- a/assets/css/pages/home/_base.scss
+++ b/assets/css/pages/home/_base.scss
@@ -36,8 +36,9 @@
 
     .main-content {
         .padcast-swiper-container {
-            background: var(--base-bg);
+            // background: var(--base-bg);
             width: 100%;
+          
 
             .padcast-swiper {
                 overflow-x: hidden;
@@ -60,7 +61,7 @@
                         z-index: 10;
                         transform: scale(1);
                         // margin-top: -30px;
-                        background: rgba(237, 246, 255, 0.7);
+                        background: rgba(#FFF, 0.7);
                         // align-items: end;
                     }
 
