--- a/assets/css/pages/home/_xxl.scss
+++ b/assets/css/pages/home/_xxl.scss
@@ -9,3 +9,14 @@
         }
     }
 }
+.articles-section {
+    .articles-swiper {
+        margin-left: calc((var(--bs-width) - 100vw - 20px)* 0.5);
+    }
+}
+
+.courses-section {
+    .courses-swiper {
+        margin-left: calc((var(--bs-width) - 100vw - 20px)* 0.5);
+    }
+}
