fix-header-and-footer-zindex

--- a/assets/css/components/footer/_base.scss
+++ b/assets/css/components/footer/_base.scss
@@ -5,6 +5,7 @@ footer.base-footer {
     margin-top: 615px;
     margin-bottom: 80px;
     padding: 0 100px;
+    z-index: 10;
     .main-footer-content{
            margin-top: 58px;
     }
