--- a/views/contactus.html
+++ b/views/contactus.html
@@ -220,7 +220,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <button class="btn white mt-xs text-secondary"
+                                                <button class="btn white mt-xs "
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
                                                     <img src="/assets/img/wave.png" alt="">
