--- a/views/video.html
+++ b/views/video.html
@@ -418,7 +418,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <button class="btn white mt-xs text-secondary"
+                                                <button class="btn white mt-xs "
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
                                                     <img src="/assets/img/wave.png" alt="">
