fix-body-overflow

--- a/assets/css/partials/_reboot.scss
+++ b/assets/css/partials/_reboot.scss
@@ -22,8 +22,8 @@ body {
   background-position:
   top left,
   bottom right;
-  overflow-x: hidden;
-  z-index: 0;
+  // overflow-x: hidden;
+  z-index: -1;
 }
 
 * {
