--- a/assets/css/partials/bootstrap-grid/_base.scss
+++ b/assets/css/partials/bootstrap-grid/_base.scss
@@ -10,6 +10,7 @@
   margin-right: auto;
   margin-left: auto;
   max-width: var(--bs-width);
+  z-index: 1;
 }
 
 [class^="col-"], [class*=" col-"]{
