--- a/assets/css/components/footer/_base.scss
+++ b/assets/css/components/footer/_base.scss
@@ -9,6 +9,7 @@ footer.base-footer {
     z-index: 100;
     .main-footer-content{
            margin-top: 58px;
+           position: relative;
     }
     .overlay {
         position: absolute;
@@ -16,7 +17,7 @@ footer.base-footer {
         background-color: rgba(255, 255, 255, 0.60);
         filter: drop-shadow(28px 25px 117px rgba(58, 143, 244, 0.14));
         border-radius: 15px;
-        z-index: -1;
+        z-index: 0;
     }
     .float-form {
         border-radius: var(--rounded-sm, 5px);
@@ -98,6 +99,7 @@ footer.base-footer {
         line-height: 123.5%;
         padding-top: 24px;
         padding-bottom: 26px;
+        position: relative;
     }
 
     &.top-md {
